--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,16 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
+# Ignore .env file containing credentials.
+.env*
+# Ignore Mac and Linux file system files
+*.swp
+.DS_Store
